vagrant/traefik-tutorial/traefik-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik-ui.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
